<resources>
    <string name="app_name">MimGenerator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_app">MimGenerator</string>
    <string name="add_logo">Add Logo</string>
    <string name="add_text">Add Text</string>
    <string name="lanjut">Continue</string>
    <string name="save">Simpan</string>
    <string name="share">Share</string>
    <string name="share_to_fb">Share to FB</string>
    <string name="share_to_twitter">Share to Twitter</string>
</resources>