<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-5dp"
        android:text="@string/title_app"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBack">

        <ImageView
            android:id="@+id/ivMemePicture"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="60dp" />

        <ImageView
            android:id="@+id/ivOverlay"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="60dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_logo"

                />

            <ImageButton
                android:id="@+id/ivLogo"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_image_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_text"

                />

            <ImageButton
                android:id="@+id/ivAddText"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_text_increase_24" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/lanjut" />
</RelativeLayout>